--- a/templates/train_partial.jinja2
+++ b/templates/train_partial.jinja2
@@ -2,7 +2,7 @@
     <tr>
       <th>Station</th><th>Arrival</th><th>Departure</th><th>Comment</th>
     </tr>
-    {% for station in train["stations"] %}
+    {% for station in train["stations"].values() %}
     <tr>
       <th>{{ station["code"] }}</th>
       <td>
