render everything a bit more nicely

--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -13,7 +13,7 @@
     {% block content %}
     {% endblock %}
   </body>
-  <footer style="margin-top: 1em;">
+  <footer style="margin-top: 1em; width: 100%; max-width: 25em;">
     <small>Train status is sourced from Amtrak's <a href="https://www.amtrak.com/track-your-train.html">Track Your Train Map</a>, which should be considered the authoritative source for train information. This site is not affiliated with Amtrak, and no guarantees are made as to accuracy, timeliness or completeness of the data shown. Please use at your own risk.</small>
   </footer>
 </html>
