--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -7,13 +7,31 @@
 
     {% block extra_js %}
     {% endblock %}
-    <script src="https://unpkg.com/htmx.org@1.9.11"></script>
+    <script src="{{ static('js/htmx.min.js') }}"></script>
+    <style>
+      a:visited {
+        color: blue;
+      }
+      table {
+        border-collapse: collapse;
+      }
+      th, td {
+        padding-left: .25em;
+        padding-right: .25em;
+      }
+      tr:nth-child(even) {
+        background-color: ghostwhite;
+      }
+      table td, table th, table td *, table th * {
+        vertical-align: top;
+      }
+    </style>
   </head>
-  <body>
+  <body style="font-family: serif;">
     {% block content %}
     {% endblock %}
   </body>
-  <footer style="margin-top: 1em; width: 100%; max-width: 25em;">
+  <footer style="font-family: serif; margin-top: 1em; width: 100%; max-width: 25em;">
     <small>Train status is sourced from Amtrak's <a href="https://www.amtrak.com/track-your-train.html">Track Your Train Map</a>, which should be considered the authoritative source for train information. This site is not affiliated with Amtrak, and no guarantees are made as to accuracy, timeliness or completeness of the data shown. Please use at your own risk.</small>
   </footer>
 </html>
