--- a/templates/train.jinja2
+++ b/templates/train.jinja2
@@ -1,8 +1,13 @@
 {% extends 'base.jinja2' %}
 {% block content %}
-<h1>{{ train["route_name"] }}</h1>
+<h1 style="margin-block-end: .25em; margin-block-start: .25em;">{{ train["route_name"] }}</h1>
+<p style="margin-block-end: .25em; margin-block-start: .25em;"><small>Initial Departure: {{ train["departure_date"].strftime("%Y-%m-%d") }}</small></p>
 {% if train_ids|length > 1 %}
-  <small>Other trains: {% for id in train_ids %}{% if train["id"] != id %}<a href="/trains/{{ train["train_number"] }}/{{ id }}">{{ id }}</a>{% endif %}{% endfor %}</small>
+  <small>Other trains:</small><br>
+  {% for id, date in train_ids %}
+    {% if train["id"] != id %}<small>  * <a href="/trains/{{ train["train_number"] }}/{{ id }}">Initial Departure: {{ date.strftime("%Y-%m-%d") }}</a></small><br>{% endif %}
+  {% endfor %}
+  <br>
 {% endif %}
 <div hx-get="/trains/{{ train["train_number"] }}/{{ train["id"] }}/_partial" hx-trigger="every 5s" hx-swap="innerHTML transition:true">
   {% include 'train_partial.jinja2' %}
