--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -1,7 +1,7 @@
 {% extends 'base.jinja2' %}
 {% block content %}
 <div style="width: 100%; max-width: 30em;">
-<h1>amtrak.live</h1>
+<h1>amtra<span style="color: orange;">c</span>k.live</h1>
 
 <p>
   This is a the lightest weight tracker <a href="https://durbin.ee">I</a> could imagine (and implement).
