--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -16,12 +16,12 @@
 <ul>
   <li>An index of <a href="/trains"><b>active</b> trains</a></li>
   <li>Pages for a given train number, that will load the most recently departed active train for that train number</li>
-  <ul><li>Like <a href="/trains/42"><code>https://amtrak.live/trains/42</code></a> for the Pennsylvanian (42)</li></ul>
+  <ul><li>Like <a href="/trains/42"><code>https://amtrack.live/trains/42</code></a> for the Pennsylvanian (42)</li></ul>
   <li>Pages for _specific_ trains when multiple <b>active</b> trains are running for a given train number</li>
   <ul>
     <li>For example, the <a href="/trains/6">California Zephyr (6)</a> often has multiple trains on the line with different initial departure dates</li>
-    <li><code>https://amtrak.live/trains/6/YYYY-MM-DD</code></li>
-    <li>Like <code>https://amtrak.live/trains/6/2024-05-23</code></li>
+    <li><code>https://amtrack.live/trains/6/YYYY-MM-DD</code></li>
+    <li>Like <code>https://amtrack.live/trains/6/2024-05-23</code></li>
   </ul>
   <br>
   <li>JSON!</li>
