simple addition to the train view

--- a/templates/train.jinja2
+++ b/templates/train.jinja2
@@ -1,6 +1,6 @@
 {% extends 'base.jinja2' %}
 {% block content %}
-<h1 style="margin-block-end: .25em; margin-block-start: .25em;">{{ train["route_name"] }}</h1>
+<h1 style="margin-block-end: .25em; margin-block-start: .25em;">{{ train["route_name"] }} #{{ train["train_number"] }}</h1>
 <p style="margin-block-end: .25em; margin-block-start: .25em;"><small>Initial Departure: {{ train["departure_date"].strftime("%Y-%m-%d") }}</small></p>
 {% if train_ids|length > 1 %}
   <small>Other trains:</small><br>
