fine add contact

--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -51,6 +51,10 @@
   If you appreciate this tool, I welcome tips to EWDurbin on Venmo and Cash.app.
 </p>
 
+<h2>Contact</h2>
+
+<a href="mailto:amtrack@durbin.ee">amtrack@durbin.ee</a>
+
 <hr>
 </div>
 
