--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -8,6 +8,7 @@
     {% block extra_js %}
     {% endblock %}
     <script src="{{ static('js/htmx.min.js') }}"></script>
+    <script defer data-api="/api/event" data-domain="amtrack.live,amtrak.live,trains.durbin.ee" src="/js/script.js"></script>
     <style>
       a:visited {
         color: blue;
