--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -27,6 +27,18 @@
         vertical-align: top;
       }
     </style>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
+    <link rel="manifest" href="static/favicon/site.webmanifest">
+    {% block opengraph %}
+    <title>{{ request.headers.get("HOST") }}</title>
+    <meta property="og:title" content="{{ request.headers.get('HOST') }}" />
+    {% endblock %}
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://{{ request.headers.get('HOST') }}{{ request.path }}" />
+    <meta property="og:image" content="https://{{ request.headers.get('HOST') }}/static/favicon/android-chrome-512x512.png" />
   </head>
   <body style="font-family: serif;">
     <div style="width: 100%; font-size: smaller; max-width: 30em; background-color: #FFE1E6; color: grey; text-align: center;">
