--- a/templates/train.jinja2
+++ b/templates/train.jinja2
@@ -2,6 +2,8 @@
 {% block opengraph %}
     <title>{{ request.headers.get("HOST") }} - {{ train["route_name"] }} #{{ train["train_number"] }} </title>
     <meta property="og:title" content="{{ request.headers.get('HOST') }} - {{ train["route_name"] }} #{{ train["train_number"] }}" />
+    <meta name="description" content="{{ train["route_name"] }} #{{ train["train_number"] }} - Ultra-lightweight Amtrak train status tracker.">
+    <meta property="og:description" content="{{ train["route_name"] }} #{{ train["train_number"] }} - Ultra-lightweight Amtrak train status tracker.">
 {% endblock %}
 {% block content %}
 <h1 style="margin-block-end: .25em; margin-block-start: .25em;">{{ train["route_name"] }} #{{ train["train_number"] }}</h1>
