--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -42,23 +42,31 @@
     <meta property="og:url" content="https://{{ request.headers.get('HOST') }}{{ request.path }}" />
     <meta property="og:image" content="https://{{ request.headers.get('HOST') }}/static/opengraph.png" />
   </head>
-  <body style="font-family: serif;">
-    <div style="width: 100%; font-size: smaller; max-width: 30em; background-color: #FFE1E6; color: #111111; text-align: center;">
-      <span style="width: 100%;">This application is being objected to by Amtrak via bogus malware/phishing complaints leading to inaccesibility on some domains.</span><br>
-      <span style="width: 100%;">If you're unable to access it at {{ request.headers.get("HOST") }}, try one of:</span><br> 
-      <span style="width: 100%;">
-    {% set domains = ['amtrack.live', 'amtrak.live', 'trains.durbin.ee'] %}
-    {% if request.headers.get("HOST") in domains %}
-      {% set foo = domains.remove(request.headers.get("HOST")) %}
-    {% endif %}
-    {% for domain in domains %}
-      {% if loop.last %} or {% endif %}<a href="https://{{ domain }}">{{ domain }}</a></span>
-    {% endfor %}
+  <body style="font-family: serif; box-sizing: border-box; height: 100vh; margin: 0; padding: 0;">
+    <div style="max-width: 30em; min-height: 100%; display: flex; flex-direction: column;">
+      <header style="width: 100%; font-size: smaller; background-color: #FFE1E6; color: #111111; text-align: center; flex-grow: 0; flex-shrink: 0;">
+        <span>This application is being objected to by Amtrak via bogus malware/phishing complaints leading to inaccesibility on some domains.</span><br>
+        <span>If you're unable to access it at {{ request.headers.get("HOST") }}, try one of:</span><br> 
+        <span>
+        {% set domains = ['amtrack.live', 'amtrak.live', 'trains.durbin.ee'] %}
+        {% if request.headers.get("HOST") in domains %}
+          {% set foo = domains.remove(request.headers.get("HOST")) %}
+        {% endif %}
+        {% for domain in domains %}
+          {% if loop.last %} or {% endif %}<a href="https://{{ domain }}">{{ domain }}</a></span>
+        {% endfor %}
+      </header>
+      <main style="flex-grow: 1;">
+        {% block content %}
+        {% endblock %}
+      </main>
+      <footer style="font-family: serif; margin-top: 1em; width: 100%; max-width: 30em; flex-grow: 0; flex-shrink: 0;">
+        <small>Train status is sourced from Amtrak's <a href="https://www.amtrak.com/track-your-train.html">Track Your Train Map</a>, which should be the authoritative source for train information. This site is not affiliated with Amtrak, and no guarantees are made as to accuracy, timeliness or completeness of the data shown. Please use at your own risk.</small>
+      </footer>
     </div>
-    {% block content %}
-    {% endblock %}
   </body>
-  <footer style="font-family: serif; margin-top: 1em; width: 100%; max-width: 25em;">
-    <small>Train status is sourced from Amtrak's <a href="https://www.amtrak.com/track-your-train.html">Track Your Train Map</a>, which should be the authoritative source for train information. This site is not affiliated with Amtrak, and no guarantees are made as to accuracy, timeliness or completeness of the data shown. Please use at your own risk.</small>
-  </footer>
+  <script>
+  {% block js %}
+  {% endblock %}
+  </script>
 </html>
