--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -48,7 +48,7 @@
 </p> 
 
 <p>
-  If you appreciate this tool, I welcome tips to EWDurbin on Venmo and Cash.app.
+  This service is provided at no cost, and will never have ads. If you appreciate it, I welcome tips to EWDurbin on Venmo and Cash.app.
 </p>
 
 <h2>Contact</h2>
