--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -48,10 +48,10 @@
     {% block content %}
     {% endblock %}
   </body>
+  <hr>
   <footer style="font-family: serif; margin-top: 1em; width: 100%; max-width: 25em;">
-    <div style="width: 100%; font-size: smaller; max-width: 30em; background-color: #FFE1E6; color: #111111; text-align: center;">
-      <span style="width: 100%;">This application is being objected to by Amtrak via bogus malware/phishing complaints leading to inaccesibility on some domains.</span><br>
-      <span style="width: 100%;">If you're unable to access it at {{ request.headers.get("HOST") }}, try one of:</span><br>
+    <div style="width: 100%; font-size: smaller; max-width: 30em; text-align: center;">
+      <div style="width: 100%;">This service is also available at:</div>
       <span style="width: 100%;">
     {% set domains = ['amtrack.live', 'amtrak.live', 'trains.durbin.ee'] %}
     {% if request.headers.get("HOST") in domains %}
@@ -61,7 +61,17 @@
       {% if loop.last %} or {% endif %}<a href="https://{{ domain }}">{{ domain }}</a></span>
     {% endfor %}
     </div>
-    <br>
-    <small>Train status is sourced from Amtrak's <a href="https://www.amtrak.com/track-your-train.html">Track Your Train Map</a>, which should be the authoritative source for train information. This site is not affiliated with Amtrak, and no guarantees are made as to accuracy, timeliness or completeness of the data shown. Please use at your own risk.</small>
+    {% block footer_disclaimer %}
+    <p style="font-size: smaller; background: #FFC000; padding: .5em;">
+      AMTRAK is a registered trademark of National Railroad Passenger Corporation.
+      This site is not affiliated with, sponsored by, or endorsed by AMTRAK.
+      It is provided as a service to help people locate AMTRAK trains.
+    </p>
+    {% endblock %}
+    <p style="font-size: smaller;">
+      Train status is sourced from Amtrak's <a href="https://www.amtrak.com/track-your-train.html">Track Your Train Map</a>,
+      which should be the authoritative source for train information.
+      No guarantees are made as to accuracy, timeliness or completeness of the data shown. Please use at your own risk.
+    </p>
   </footer>
 </html>
