--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-  This is a the lightest weight tracker <a href="https://durbin.ee">I</a> could imagine (and implement).
+  This is the lightest weight tracker <a href="https://durbin.ee">I</a> could imagine (and implement).
 </p>
 
 <p>
