make it a grown up app

--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -26,6 +26,16 @@
       table td, table th, table td *, table th * {
         vertical-align: top;
       }
+      /* Train state colors */
+      a.train-predeparture {
+        color: #666666; /* Grey */
+      }
+      a.train-active {
+        color: blue; /* Normal blue */
+      }
+      a.train-completed {
+        color: black; /* Black */
+      }
     </style>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png">
