use plausible directly

--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -8,7 +8,7 @@
     {% block extra_js %}
     {% endblock %}
     <script src="{{ static('js/htmx.min.js') }}"></script>
-    <script defer data-api="/api/event" data-domain="amtrack.live,amtrak.live,trains.durbin.ee" src="/js/script.js"></script>
+    <script defer data-domain="trak.am,amtrak.live,amtrack.live,trains.durbin.ee" src="https://plausible.io/js/script.outbound-links.js"></script>
     <style>
       a:visited {
         color: blue;
