move info around

--- a/templates/about.jinja2
+++ b/templates/about.jinja2
@@ -5,6 +5,20 @@
 <h1>trak.am</h1>
 <p style="color: grey"><i>The service previously known as amtrak.live</i></p>
 
+<h2>Why?</h2>
+
+<p>
+  Nearly every other Amtrak train tracker has become bloated with ads, overkill Javascript, and provides a poor experience on <code>Amtrak_WiFi</code>... and often even on a solid internet connection.
+</p>
+
+<p>
+  This tracker is built to be optimized for the shittiest internet connection, self-refresh, and require nothing more than opening your phone to the already loaded page to get the latest data. <i>No refreshing required</i>.
+</p>
+
+<p>
+  This service is provided at no cost and will never have ads. If you appreciate it, I welcome tips to EWDurbin on Venmo and Cash.app.
+</p>
+
 <h2>What happened to amtrak.live and amtrack.live?</h2>
 
 I was repeatedly threatened with lawsuits regarding copyright infringement
@@ -18,6 +32,10 @@ I actually really like Amtrak, but am disappointed in their scummy
 which endlessly threatened me with lawsuits regarding the old domains.
 
 These domain names are just a vent.
+
+<h2>Contact</h2>
+
+<a href="mailto:amtrack@durbin.ee">amtrack@durbin.ee</a>
 
 {% endblock %}
 
