--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -9,6 +9,8 @@
   This is the lightest weight tracker of Amtrak trains <a href="https://durbin.ee">I</a> could imagine (and implement).
 </p>
 
+<p>Learn more <a href="/about">about this service</a>.
+
 <p>
   Only <a href="/trains"><b>active</b> trains</a> are available. No historic data is kept, and likely never will be!
 </p>
@@ -31,24 +33,6 @@
     <li>For basically every URL, appending <code>/json</code> will give you a lump of JSON, to do with as you please.</li>
   </ul>
 </ul>
-
-<h2>Why?</h2>
-
-<p>
-  Nearly every other Amtrak train tracker has become bloated with ads, overkill Javascript, and provides a poor experience on <code>Amtrak_WiFi</code>... and often even on a solid internet connection.
-</p>
-
-<p>
-  This tracker is built to be optimized for the shittiest internet connection, self-refresh, and require nothing more than opening your phone to the already loaded page to get the latest data. <i>No refreshing required</i>.
-</p> 
-
-<p>
-  This service is provided at no cost and will never have ads. If you appreciate it, I welcome tips to EWDurbin on Venmo and Cash.app.
-</p>
-
-<h2>Contact</h2>
-
-<a href="mailto:amtrack@durbin.ee">amtrack@durbin.ee</a>
 
 </div>
 
